Updated body font-family.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #282b34;
     color: #ffffff;
-    font-family: "Fira Sans", sans-serif, monospace;
+    font-family: Arial, Helvetica, sans-serif, monospace;
     margin: 0;
     padding: 0;
 }
